# SLAM_LYJ_optimize

./: .gitignore  CMakeLists.txt  Config.cmake.in  OptFunc.cpp  OptFunc.h  Optimize_LYJ.cpp  Optimize_LYJ.h  Optimize_LYJ_Defines.h
CeresCheck/: CeresCheck.cpp  CeresCheck.h
CeresCheck/CeresFactor/: CeresFactor.h
CeresCheck/CeresParameter/: CeresParameter.h
CeresCheck/CeresProblem/: CeresProblem.cpp  CeresProblem.h
Factor/: Factor.h  FactorAbr.h
Optimizer/: optimizer.cpp  optimizer.h  optimizerAbr.h  optimizerBALAbr.h
Variable/: Variable.h  VariableAbr.h
example/: main.cpp
